[project]
name = "dataeng-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "jonas.isaias",email = "jonas.isaias.ext@ipiranga.ipiranga"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
